--- a/src/style/index.css
+++ b/src/style/index.css
@@ -55,3 +55,17 @@ i {
     font-family: 'Inter' !important;
 }
 
+/* Overrides */
+
+.ui.blue.segment:not(.inverted), .alice-blue-segment {
+    border-top: 2px solid #8DA9BB !important;
+}
+
+.centerabsarrow {
+    position: absolute; 
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 37px; /* Need a specific value to work */
+}
